Bug 1748482 - Check XML parser for brokenness in various methods. r=smaug, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D135096